# backend

./: Dockerfile  alembic.ini  compose.yaml  pyproject.toml
db/: bd.env
models/: config.py  database.py
models/models/: base.py  doctors.py  organizations.py  requests.py  users.py
nginx/: Dockerfile  nginx.conf
schemas/: base.py  doctors.py  organization.py  request.py  user.py
